--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "sass sass/styles.scss css/styles.css"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/benjamindaniels21/personal-site/issues"
   },
-  "homepage": "https://github.com/benjamindaniels21/personal-site#readme"
+  "homepage": "https://github.com/benjamindaniels21/personal-site#readme",
+  "devDependencies": {
+    "sass": "^1.41.1"
+  }
 }
